# Triangulation

./: CMakeLists.txt  README.md
example/common/: ERK.h  TestUtility.h
src/: CMakeLists.txt
src/Core/: Box.h  Config.h  Curve.cpp  Curve.h  Polynomial.h  Tensor.h  TensorExpr.h  TensorSlice.h  TensorSlicing.h  Vec.h  Wrapper_LAPACKE.h  Wrapper_OpenMP.h  numlib.h
src/FiniteDiff/: BOV.cpp  BOV.h  FuncFiller.h  GhostFiller.cpp  GhostFiller.h  Intergrid.cpp  Intergrid.h  LevelOp.cpp  LevelOp.h  Multigrid.cpp  Multigrid.h  RectDomain.h
src/Geometry/: Delaunay.cpp  Delaunay.h
test/: CMakeLists.txt  relax.F  testCore.cpp  testDelaunay.cpp  testFiniteDiff.cpp  testMG4Poisson.cpp  testPerf.cpp
test/matlab/: linearizeSpline.m  readEmbeddedGrid.m  readTensor.m  readpp.m  signedArea.m  testPoisson4th.m  visCutCellBrdy.m  visEmbeddedGrid.m
test/matlab/curvilinear/: genLaplacianCvl.m  genLaplacianCvl4th.m  genMetricOfSector.m  testPoissonCvl.m  testPoissonCvl4th.m
